# pytorch2ncnn

./: README.md
ModelFiles/classfication_cr/: small_nn.py
code/: ConvertLayer_ncnn.py  ConvertModel.py  run.py
test_ncnn/: CMakeLists.txt  main.cpp
